<resources>
    <string name="app_name">GroceryList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="starting_welcome">Welcome!</string>
    <string name="add_item">ADD ITEM</string>
    <string name="welcome_message">Welcome to Aldi\'s</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="start_list">START LIST</string>
    <string name="peanut_butter">PEANUT BUTTER</string>
    <string name="milk">MILK</string>
    <string name="bread">BREAD</string>
    <string name="grapes">GRAPES</string>
    <string name="strawberries">STRAWBERRIES</string>
    <string name="pasta">PASTA</string>
    <string name="meatballs">MEATBALLS</string>
    <string name="orange_juice">ORANGE JUICE</string>
</resources>