<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">


    <TextView
        android:id="@+id/welcome_message_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:gravity="center"
        android:textSize="55sp"
        android:layout_marginTop="24dp"
        android:textColor="#39B9DC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/enter_name_edit_text"
        />

    <EditText
        android:id="@+id/enter_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_message_text_view"
        />

    <Button
        android:id="@+id/start_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_list"
        android:textSize="16sp"
        android:backgroundTint="#39B9DC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_name_edit_text"
        />



</androidx.constraintlayout.widget.ConstraintLayout>